<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>gov.nih.ncats</groupId>
    <artifactId>gsrs-ep-substance-extension</artifactId>
    <version>3.0.2-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <java.version>1.8</java.version>
        <spring-boot.version>2.4.5</spring-boot.version>
        <gsrs.substances.version>3.0.2-SNAPSHOT</gsrs.substances.version>
        <log4j2.version>2.17.2</log4j2.version>
        <jmespath.version>0.5.1</jmespath.version>
        <httpclient.version>4.5.13</httpclient.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>gov.nih.ncats</groupId>
            <artifactId>gsrs-module-substances-core</artifactId>
            <version>${gsrs.substances.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.16</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.burt</groupId>
            <artifactId>jmespath-core</artifactId>
            <version>${jmespath.version}</version>
        </dependency>
        <dependency>
            <groupId>io.burt</groupId>
            <artifactId>jmespath-jackson</artifactId>
            <version>${jmespath.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${httpclient.version}</version>
        </dependency>
    </dependencies>

</project>

